Maze generation user interface

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
-        "AldousBroder",
+        "Aldous",
         "Bitonic",
+        "Broder",
         "deadend",
         "deadends",
+        "Eller",
         "Ellers",
         "heapify",
+        "Kruskal",
         "Kruskals",
         "unmark",
         "Wilsons"
