Dijkstra's algorithm and A*

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,13 @@
         "Broder",
         "deadend",
         "deadends",
+        "Dijkstras",
         "Eller",
         "Ellers",
         "heapify",
         "Kruskal",
         "Kruskals",
+        "pathfinding",
         "unmark",
         "Wilsons"
     ]
